--- a/package.json
+++ b/package.json
@@ -1,10 +1,10 @@
 {
-  "name": "create-yuki-app",
+  "name": "yukin",
   "version": "0.1.0",
   "private": true,
   "type": "module",
   "scripts": {
-    "dev": "next dev",
+    "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "eslint .",
